<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.AddTransportFragment">

    <EditText
        android:id="@+id/nameOfTransport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_the_name_of_transport"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chooseType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_type_of_transport"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/nameOfTransport" />

    <RadioGroup
        android:id="@+id/transportTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/chooseType">

        <RadioButton
            android:id="@+id/car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/car"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <RadioButton
            android:id="@+id/minibus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minibus"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <RadioButton
            android:id="@+id/motorcycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motorcycle"
            android:textSize="20sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />
    </RadioGroup>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_info_about_transport"
        android:textSize="20sp"
        android:layout_margin="60dp"
        app:layout_constraintTop_toBottomOf="@id/transportTypeGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>
